--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -524,35 +524,35 @@ video::-webkit-media-controls {
     </div><!-- /#pt -->
   </div><!-- /.container -->
 
-  <script>
-    function showLang(lang){
-      document.getElementById('en').style.display = (lang==='en')?'block':'none';
-      document.getElementById('pt').style.display = (lang==='pt')?'block':'none';
-      document.getElementById('btn-en').classList.toggle('active', lang==='en');
-      document.getElementById('btn-pt').classList.toggle('active', lang==='pt');
-    }
-    /* default = English */
-    showLang('en');
-  </script>
+ <script>
+  function showLang(lang) {
+    document.getElementById('en').style.display = (lang === 'en') ? 'block' : 'none';
+    document.getElementById('pt').style.display = (lang === 'pt') ? 'block' : 'none';
+    document.getElementById('btn-en').classList.toggle('active', lang === 'en');
+    document.getElementById('btn-pt').classList.toggle('active', lang === 'pt');
 
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const video = document.getElementById('samuelVideo');
-    if (!video) return;
-
-    const observer = new IntersectionObserver((entries, obs) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          video.play().catch(e => {
-            // Alguns navegadores exigem que o vídeo esteja "muted" para autoplay
-            console.log("Autoplay blocked. Consider muting the video or prompting user.");
+    // Espera um pouco para garantir que o DOM da nova seção foi exibido
+    setTimeout(() => {
+      const video = document.querySelector(`#${lang} video`);
+      if (video) {
+        const observer = new IntersectionObserver((entries, obs) => {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              video.play().catch(e => {
+                console.log("Autoplay blocked:", e);
+              });
+              obs.unobserve(video);
+            }
           });
-          obs.unobserve(video); // toca só uma vez
-        }
-      });
-    }, { threshold: 0.5 }); // 50% do vídeo visível
+        }, { threshold: 0.5 });
+        observer.observe(video);
+      }
+    }, 300);
+  }
 
-    observer.observe(video);
+  // Default = English
+  document.addEventListener('DOMContentLoaded', () => {
+    showLang('en');
   });
 </script>
 
