--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -275,11 +275,11 @@ video::-webkit-media-controls {
 
 <div style="margin: 2rem auto; max-width: 340px; text-align: center;">
   <h4 style="color: #2F4F2F; font-size: 1.2rem;">Watch Joe Interact with Robot Samuel</h4>
-  <video id="samuelVideo" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
+  <video id="samuelVideo-en" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
     <source src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/Joe_and_Samuel.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-<button onclick="unmuteVideo()" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
+<button onclick="unmuteVideo('en')" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
   🔊 Click to Unmute
 </button>
   <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
@@ -478,11 +478,11 @@ video::-webkit-media-controls {
 
 <div style="margin: 2rem auto; max-width: 340px; text-align: center;">
   <h4 style="color: #2F4F2F; font-size: 1.2rem;">Assista o Joe interagindo com o Robô Samuel</h4>
-  <video id="samuelVideo" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
+  <video id="samuelVideo-pt" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
     <source src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/Joe_and_Samuel.mp4" type="video/mp4">
     Seu navegador não suporta a tag de vídeo.
   </video>
-  <button onclick="unmuteVideo()" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
+  <button onclick="unmuteVideo('pt')" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
     🔊 Ativar Som
   </button>
   <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
@@ -557,8 +557,8 @@ video::-webkit-media-controls {
 </script>
 
 <script>
-  function unmuteVideo() {
-    const video = document.getElementById('samuelVideo');
+  function unmuteVideo(lang) {
+    const video = document.getElementById(`samuelVideo-${lang}`);
     if (video) {
       video.muted = false;
       video.volume = 1.0;
