--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -299,6 +299,41 @@ video::-webkit-media-controls {
         </div>
       </section>
 
+<!-- ======= EXTRA VIDEOS SECTION EN ======= -->
+<section>
+  <h3>Exclusive Hannah Videos</h3>
+
+  <!-- VIDEO 1 -->
+  <div style="margin: 2rem auto; max-width: 340px; text-align: center;">
+    <h4 style="color: #2F4F2F; font-size: 1.2rem;">Story Video – Unit 1</h4>
+    <video id="autoVideo1-en" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
+      <source src="https://hannahenglishcourse.netlify.app/Level1/Unit1/DataVideo/video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <button onclick="unmuteExtraVideo('autoVideo1-en')" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
+      🔊 Click to Unmute
+    </button>
+    <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
+      <strong>Exclusive videos from the Hannah English Course</strong> – Each video story and song is specially crafted for every unit of the course, integrating grammar and vocabulary targets with evangelistic purpose. They teach the language while powerfully sharing the Gospel.
+    </p>
+  </div>
+
+  <!-- VIDEO 2 -->
+  <div style="margin: 2rem auto; max-width: 340px; text-align: center;">
+    <h4 style="color: #2F4F2F; font-size: 1.2rem;">Story Video – Unit 2</h4>
+    <video id="autoVideo2-en" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
+      <source src="https://hannahenglishcourse.netlify.app/Level0/Unit2/DataVideo/video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <button onclick="unmuteExtraVideo('autoVideo2-en')" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
+      🔊 Click to Unmute
+    </button>
+    <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
+      <strong>Exclusive videos from the Hannah English Course</strong> – Each video story and song is specially crafted for every unit of the course, integrating grammar and vocabulary targets with evangelistic purpose. They teach the language while powerfully sharing the Gospel.
+    </p>
+  </div>
+</section>
+
       <!-- CTA -->
       <section>
         <h3>Bring Hannah English Course to Your School</h3>
@@ -502,6 +537,41 @@ video::-webkit-media-controls {
         </div>
       </section>
 
+<!-- ======= EXTRA VIDEOS SECTION PT ======= -->
+<section>
+  <h3>Vídeos Exclusivos do Curso Hannah</h3>
+
+  <!-- VIDEO 1 -->
+  <div style="margin: 2rem auto; max-width: 340px; text-align: center;">
+    <h4 style="color: #2F4F2F; font-size: 1.2rem;">Vídeo da História – Unidade 1</h4>
+    <video id="autoVideo1-pt" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
+      <source src="https://hannahenglishcourse.netlify.app/Level1/Unit1/DataVideo/video.mp4" type="video/mp4">
+      Seu navegador não suporta a tag de vídeo.
+    </video>
+    <button onclick="unmuteExtraVideo('autoVideo1-pt')" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
+      🔊 Ativar Som
+    </button>
+    <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
+      <strong>Vídeos exclusivos do Hannah English Course</strong> – Cada história e música foi criada especialmente para as unidades do curso, integrando objetivos gramaticais e de vocabulário com o propósito evangelístico. Ensinam a língua enquanto anunciam o Evangelho com poder.
+    </p>
+  </div>
+
+  <!-- VIDEO 2 -->
+  <div style="margin: 2rem auto; max-width: 340px; text-align: center;">
+    <h4 style="color: #2F4F2F; font-size: 1.2rem;">Vídeo da História – Unidade 2</h4>
+    <video id="autoVideo2-pt" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
+      <source src="https://hannahenglishcourse.netlify.app/Level0/Unit2/DataVideo/video.mp4" type="video/mp4">
+      Seu navegador não suporta a tag de vídeo.
+    </video>
+    <button onclick="unmuteExtraVideo('autoVideo2-pt')" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
+      🔊 Ativar Som
+    </button>
+    <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
+      <strong>Vídeos exclusivos do Hannah English Course</strong> – Cada história e música foi criada especialmente para as unidades do curso, integrando objetivos gramaticais e de vocabulário com o propósito evangelístico. Ensinam a língua enquanto anunciam o Evangelho com poder.
+    </p>
+  </div>
+</section>
+
       <!-- CTA PT -->
       <section>
         <h3>Traga o Hannah English Course para Sua Escola</h3>
@@ -559,6 +629,40 @@ video::-webkit-media-controls {
 <script>
   function unmuteVideo(lang) {
     const video = document.getElementById(`samuelVideo-${lang}`);
+    if (video) {
+      video.muted = false;
+      video.volume = 1.0;
+      video.play().catch(e => {
+        console.log("Playback blocked:", e);
+      });
+    }
+  }
+</script>
+
+<script>
+  // Autoplay videos when visible
+  document.addEventListener('DOMContentLoaded', () => {
+    const videoIds = ['autoVideo1-en', 'autoVideo2-en', 'autoVideo1-pt', 'autoVideo2-pt'];
+    videoIds.forEach(id => {
+      const video = document.getElementById(id);
+      if (video) {
+        const observer = new IntersectionObserver((entries, obs) => {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              video.play().catch(e => {
+                console.log("Autoplay blocked:", e);
+              });
+              obs.unobserve(video);
+            }
+          });
+        }, { threshold: 0.5 });
+        observer.observe(video);
+      }
+    });
+  });
+
+  function unmuteExtraVideo(videoId) {
+    const video = document.getElementById(videoId);
     if (video) {
       video.muted = false;
       video.volume = 1.0;
