--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -307,15 +307,18 @@
       // ===== Propriedades de animação para flutuar (X e Y) =====
       // Velocidade horizontal em px/ms
       const speedX    = getRandomBetween(0.03, 0.07);
+      // DEFINE O SENTIDO: +1 PARA DIREITA / -1 PARA ESQUERDA
+      const direction = Math.random() < 0.5 ? -1 : 1;
       // Oscilação vertical (amplitude em px e frequência em ms)
       const ampY      = getRandomBetween(10, 30);     // +/- amplitude
-      const freqY     = getRandomBetween(0.002, 0.005); // velocidade oscilação
+      const freqY     = getRandomBetween(0.002, 0.005); // frequência (px/ms)
       // Fases iniciais aleatórias para X e Y, de modo que não fiquem todos sincronizados
       const phaseX    = Math.random() * 2 * Math.PI;
       const phaseY    = Math.random() * 2 * Math.PI;
 
       balloon._floatProps = {
         speedX,
+        direction,
         amplitudeY: ampY,
         frequencyY: freqY,
         phaseX,
@@ -509,11 +512,11 @@
       removeAllBalloons();
       balloonsArray.length = 0;
 
-      // 2) Limpa as imagens que já estavam dentro dos vagões
+      // 2) Remove todas as <img> que ficaram dentro dos vagões
       const imgsInWagons = document.querySelectorAll('.wagon img');
       imgsInWagons.forEach(img => img.remove());
 
-      // 3) Remove a classe “correct” de todos os vagões
+      // 3) Remove a classe “correct” de todos os vagões (para desfazer o glow)
       const allWagons = document.querySelectorAll('.wagon');
       allWagons.forEach(w => w.classList.remove('correct'));
 
@@ -557,8 +560,8 @@
         // CALCULA OSCILAÇÃO VERTICAL (senoide)
         // topBase + amplitudeY * sin( phaseY + frequência * tempoTotal )
         const timeTotal = timestamp; // podemos usar timestamp inteiro como “tempo total”
-        const oscY = props.amplitudeY * Math.sin(props.phaseY + props.frequencyY * timeTotal);
-        const newTop = props.topBase + oscY;
+        const oscY      = props.amplitudeY * Math.sin(props.phaseY + props.frequencyY * timeTotal);
+        const newTop    = props.topBase + oscY;
 
         balloon.style.left = newLeft + 'px';
         balloon.style.top  = newTop + 'px';
