--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -512,15 +512,19 @@
       removeAllBalloons();
       balloonsArray.length = 0;
 
-      // 2) Remove todas as <img> que ficaram dentro dos vagões
+      // 2) Remove todas as imagens de queda (class="falling")
+      const fallingImgs = document.querySelectorAll('.falling');
+      fallingImgs.forEach(img => img.remove());
+
+      // 3) Remove quaisquer <img> que estejam dentro dos vagões (para garantir que não fique “presa” nada)
       const imgsInWagons = document.querySelectorAll('.wagon img');
       imgsInWagons.forEach(img => img.remove());
 
-      // 3) Remove a classe “correct” de todos os vagões (para desfazer o glow)
+      // 4) Remove a classe “correct” de todos os vagões (para desfazer o glow)
       const allWagons = document.querySelectorAll('.wagon');
       allWagons.forEach(w => w.classList.remove('correct'));
 
-      // 4) Recria o layout de vagões + balões
+      // 5) Recria o layout de vagões + balões do zero
       initWordDropGame();
     }
 
