--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -3,45 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Word Drop Express</title>
+  <title>Word Drop Express (Responsivo)</title>
+
   <style>
-    /* ========== ESTILIZAÇÃO GERAL ========== */
-    * {
+    /* ==================================================
+       1) Forçar paisagem: esconder jogo em portrait
+    ================================================== */
+    #game-container {
+      display: block;
+    }
+    #rotate-notice {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.85);
+      color: white;
+      font-size: 1.2em;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+      flex-direction: column;
+    }
+    @media only screen and (orientation: portrait) {
+      #game-container {
+        display: none;
+      }
+      #rotate-notice {
+        display: flex;
+      }
+    }
+
+    /* ==================================================
+       2) Geral / Responsividade
+    ================================================== */
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-    body {
       font-family: "Times New Roman", Times, serif;
       background: url('../../../imagens/fundo.png') repeat;
       height: 100vh;
       overflow: hidden;
-      position: relative;
     }
-
-    /* ========== CONTÊINER PRINCIPAL ========== */
     #game-container {
       position: relative;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
     }
 
-    /* ========== TREM E VAGÕES ========== */
+    /* Trem e vagões */
     #train {
       position: absolute;
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 25%;         /* altura fixa para o trem */
-      background: #2c3e50; /* cor de trilho/fundo do trem */
+      height: 25vh;        /* 25% da altura da tela */
+      min-height: 100px;   /* nunca menor que 100px */
+      background: #2c3e50;
       display: flex;
       align-items: flex-end;
       justify-content: space-around;
-      padding-bottom: 10px;
+      padding-bottom: 5px;
     }
     .wagon {
       position: relative;
-      width: calc(100% / var(--num-wagons)); /* dividimos igualmente */
+      width: calc(100% / var(--num-wagons));
       height: 80%;
       background: #ecf0f1;
       border: 3px solid #34495e;
@@ -51,11 +79,11 @@
       justify-content: center;
     }
     .wagon .word {
-      font-size: 1.5em;
+      font-size: clamp(9px, 2.5vw, 24px);
       color: #2c3e50;
       text-transform: uppercase;
       text-align: center;
-      padding: 5px;
+      padding: 2px 4px;
     }
     .wagon.correct {
       animation: glow 0.8s ease-out forwards;
@@ -66,12 +94,12 @@
       100% { box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); }
     }
 
-    /* ========== BALÕES + IMAGENS ========== */
+    /* Balões (tamanho relativo) */
     .balloon {
       position: absolute;
-      width: 100px; /* mantém balão grande */
-      height: 120px;
-      background: url('balloon.png') no-repeat center center; /* caminho para o seu balloon.png */
+      width: 15vw;       /* 15% da largura da tela */
+      max-height: 18vh;  /* no máximo 18% da altura */
+      background: url('balloon.png') no-repeat center center;
       background-size: contain;
       cursor: pointer;
       transition: transform 0.2s ease;
@@ -79,19 +107,18 @@
     .balloon:hover {
       transform: scale(1.1);
     }
-    /* A imagem fica próxima ao balão, 10px abaixo */
     .balloon img {
       position: absolute;
-      top: calc(100% + 10px); /* 100% do balão + 10px de espaço */
+      top: calc(100% + 1vh); /* 1% da altura da tela abaixo do balão */
       left: 50%;
       transform: translateX(-50%);
-      width: 80px;
-      height: 80px;
+      width: 10vw;       /* 10% da largura da tela */
+      max-height: 12vh;  /* 12% da altura da tela */
       object-fit: contain;
       pointer-events: none;
     }
 
-    /* ========== FEEDBACK DE ERRO ========== */
+    /* Feedback “Try Again!” */
     #feedback {
       position: absolute;
       top: 45%;
@@ -106,7 +133,7 @@
       z-index: 1000;
     }
 
-    /* ========== BOTÃO DE REINICIAR ========== */
+    /* Botão Reiniciar */
     #restart-button {
       position: absolute;
       top: 10px;
@@ -126,11 +153,11 @@
       background-color: #1c5980;
     }
 
-    /* ========== ANIMAÇÃO DE QUEDA DA IMAGEM ========== */
+    /* Imagem “caindo” */
     .falling {
       position: absolute;
-      width: 60px;
-      height: 60px;
+      width: 10vw;        /* mesma regra de responsividade da imagem do balão */
+      max-height: 12vh;
       object-fit: contain;
       pointer-events: none;
       z-index: 500;
@@ -138,24 +165,28 @@
   </style>
 </head>
 <body>
+  <!-- 1) Mensagem pedindo para girar o dispositivo -->
+  <div id="rotate-notice">
+    <div>
+      <p>📱 Por favor, vire seu dispositivo para o modo paisagem (landscape) para jogar.</p>
+      <p>↪️ Vire o celular/tablet e aguarde...</p>
+    </div>
+  </div>
+
+  <!-- 2) Container principal do jogo -->
   <div id="game-container">
-    <!-- Botão para reiniciar a fase -->
     <button id="restart-button" onclick="restartGame()">Restart</button>
-
-    <!-- Feedback de erro -->
     <div id="feedback">Try Again!</div>
-
-    <!-- Contêiner do trem e vagões -->
     <div id="train"></div>
   </div>
 
-  <!-- Firebase SDK (mantida igual ao seu código original) -->
+  <!-- Firebase SDK (inalterado) -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
   <script>
-    // ===== CONFIGURAÇÃO DO FIREBASE (mantida igual ao seu código original) =====
+    // ===== CONFIGURAÇÃO DO FIREBASE (igual ao seu código) =====
     const firebaseConfig = {
       apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
       authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -270,7 +301,9 @@
       requestAnimationFrame(animateBalloons);
     }
 
-    // Remove todos os balões pré-existentes do DOM
+    // =================================================
+    // Remove todos os balões flutuantes do DOM
+    // =================================================
     function removeAllBalloons() {
       const existing = document.querySelectorAll('.balloon');
       existing.forEach(b => b.remove());
@@ -286,13 +319,19 @@
       balloon.dataset.pair = imgObj.pair;
       balloon.dataset.word = imgObj.word;
 
-      // Posição inicial
-      const initialTop  = window.innerHeight * 0.05; // 5% do topo
-      const screenW     = window.innerWidth;
-      const balloonW    = 100; // largura fixa (igual ao CSS)
-      const randomX     = Math.floor(Math.random() * (screenW - balloonW - 20)) + 10;
-      balloon.style.top  = initialTop + 'px';
+      // Adiciona temporariamente ao DOM só para medir o tamanho real em px
+      document.body.appendChild(balloon);
+      const rect = balloon.getBoundingClientRect();
+      const balW = rect.width;   // largura real em px
+      const balH = rect.height;  // altura real em px
+
+      // Posição inicial: X randômico entre 0 e (largura da tela - largura do balão)
+      const screenW = window.innerWidth;
+      const randomX = Math.random() * (screenW - balW);
+      const initialTop = window.innerHeight * 0.05; // 5% do topo
+
       balloon.style.left = randomX + 'px';
+      balloon.style.top  = initialTop + 'px';
 
       // Anexa a imagem “pendurada” logo abaixo
       const imgTag = document.createElement('img');
@@ -305,16 +344,12 @@
       });
 
       // ===== Propriedades de animação para flutuar (X e Y) =====
-      // Velocidade horizontal em px/ms
-      const speedX    = getRandomBetween(0.03, 0.07);
-      // DEFINE O SENTIDO: +1 PARA DIREITA / -1 PARA ESQUERDA
-      const direction = Math.random() < 0.5 ? -1 : 1;
-      // Oscilação vertical (amplitude em px e frequência em ms)
-      const ampY      = getRandomBetween(10, 30);     // +/- amplitude
-      const freqY     = getRandomBetween(0.002, 0.005); // frequência (px/ms)
-      // Fases iniciais aleatórias para X e Y, de modo que não fiquem todos sincronizados
-      const phaseX    = Math.random() * 2 * Math.PI;
-      const phaseY    = Math.random() * 2 * Math.PI;
+      const speedX = getRandomBetween(0.03, 0.07);           // px por ms
+      const direction = Math.random() < 0.5 ? -1 : 1;        // sentido horizontal
+      const ampY = getRandomBetween(10, 30);                 // amplitude da oscilação vertical
+      const freqY = getRandomBetween(0.002, 0.005);          // frequência vertical
+      const phaseX = Math.random() * Math.PI * 2;            // fase horizontal (não usada ativamente aqui, mas pode servir)
+      const phaseY = Math.random() * Math.PI * 2;            // fase vertical
 
       balloon._floatProps = {
         speedX,
@@ -325,12 +360,11 @@
         phaseY,
         startLeft: randomX,
         topBase: initialTop,
-        width: balloonW,
+        width: balW,
         lastTimestamp: null
       };
 
-      // Adiciona ao DOM e ao array global
-      document.body.appendChild(balloon);
+      // Já está no DOM. Apenas guardamos no array para animar
       balloonsArray.push(balloon);
     }
 
@@ -343,10 +377,12 @@
     // 5) AO CLICAR NO BALÃO: remove balão e inicia queda da imagem
     // =================================================
     function popBalloon(balloonElem, imgObj) {
+      // Captura retângulo do balão (posição)
       const startRect = balloonElem.getBoundingClientRect();
-      balloonElem.remove(); // retira o balão atual
+      // Remove o balão do DOM e do array
       const idx = balloonsArray.indexOf(balloonElem);
       if (idx !== -1) balloonsArray.splice(idx, 1);
+      balloonElem.remove();
 
       // Cria elemento de imagem que cairá
       const fallingImg = document.createElement('img');
@@ -415,8 +451,8 @@
       imgElement.style.position = 'absolute';
       imgElement.style.top  = (wRect.top + wRect.height * 0.1) + 'px';
       imgElement.style.left = (wRect.left + (wRect.width - imgElement.width) / 2) + 'px';
-      imgElement.style.width  = '80px';
-      imgElement.style.height = '80px';
+      imgElement.style.width  = '10vw';
+      imgElement.style.maxHeight = '12vh';
       imgElement.style.zIndex = '1';
 
       wagonElem.classList.add('correct');
@@ -432,7 +468,6 @@
     // =================================================
     function handleWrongDrop(imgElement) {
       showFeedback();
-
       const pair = imgElement.dataset.pair;
       imgElement.remove(); // remove a imagem caída
 
@@ -505,10 +540,9 @@
     // 12) REINICIAR O JOGO
     // =================================================
     function restartGame() {
-      // Zeramos contagem de acertos
       correctCount = 0;
 
-      // 1) Remove todos os balões flutuantes do DOM
+      // 1) Remove todos os balões flutuantes
       removeAllBalloons();
       balloonsArray.length = 0;
 
@@ -516,15 +550,15 @@
       const fallingImgs = document.querySelectorAll('.falling');
       fallingImgs.forEach(img => img.remove());
 
-      // 3) Remove quaisquer <img> que estejam dentro dos vagões (para garantir que não fique “presa” nada)
+      // 3) Remove quaisquer <img> que estejam dentro dos vagões
       const imgsInWagons = document.querySelectorAll('.wagon img');
       imgsInWagons.forEach(img => img.remove());
 
-      // 4) Remove a classe “correct” de todos os vagões (para desfazer o glow)
+      // 4) Remove a classe “correct” de todos os vagões
       const allWagons = document.querySelectorAll('.wagon');
       allWagons.forEach(w => w.classList.remove('correct'));
 
-      // 5) Recria o layout de vagões + balões do zero
+      // 5) Recria tudo do zero
       initWordDropGame();
     }
 
@@ -562,8 +596,7 @@
         }
 
         // CALCULA OSCILAÇÃO VERTICAL (senoide)
-        // topBase + amplitudeY * sin( phaseY + frequência * tempoTotal )
-        const timeTotal = timestamp; // podemos usar timestamp inteiro como “tempo total”
+        const timeTotal = timestamp; // usamos timestamp como tempo “total”
         const oscY      = props.amplitudeY * Math.sin(props.phaseY + props.frequencyY * timeTotal);
         const newTop    = props.topBase + oscY;
 
@@ -577,8 +610,7 @@
     // 15) EVENT LISTENER PARA REDIMENSIONAMENTO
     // =================================================
     window.addEventListener('resize', () => {
-      // Não reposicionamos balões no resize neste exemplo. Caso deseje,
-      // poderia recalcular props.topBase aqui, ou mesmo recolocar todos os balões.
+      // Se quiser, podemos recalcular props.topBase para todos os balões aqui.
     });
   </script>
 </body>
