--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -3,64 +3,75 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Word Drop Express (Responsivo)</title>
-
+  <title>Word Drop Express – Landscape Only</title>
   <style>
-    /* ==================================================
-       1) Forçar paisagem: esconder jogo em portrait
-    ================================================== */
-    #game-container {
-      display: block;
-    }
-    #rotate-notice {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.85);
-      color: white;
-      font-size: 1.2em;
-      text-align: center;
-      align-items: center;
-      justify-content: center;
-      z-index: 2000;
-      flex-direction: column;
-    }
-    @media only screen and (orientation: portrait) {
-      #game-container {
-        display: none;
-      }
-      #rotate-notice {
-        display: flex;
-      }
-    }
-
-    /* ==================================================
-       2) Geral / Responsividade
-    ================================================== */
-    body {
+    /* ============================
+       0) Reset e overflow hidden
+    ============================ */
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+    html, body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
       font-family: "Times New Roman", Times, serif;
       background: url('../../../imagens/fundo.png') repeat;
-      height: 100vh;
-      overflow: hidden;
-    }
-    #game-container {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
     }
 
-    /* Trem e vagões */
+    /* =====================================================
+       1) Wrapper que força conteúdo em “landscape”  
+       Mesmo que o dispositivo esteja em portrait,  
+       rotacionamos o jogo 90° para a direita
+    ===================================================== */
+    #landscape-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* Sem transformação por padrão (landscape natural) */
+      transform: none;
+      transform-origin: top left;
+    }
+    @media screen and (orientation: portrait) {
+      /* Se o dispositivo estiver em portrait,  
+         rotaciona todo o conteúdo 90° para a direita  
+         Ajusta width/height para caber corretamente */
+      #landscape-wrapper {
+        width: 100vh;
+        height: 100vw;
+        transform: rotate(90deg);
+        transform-origin: top left;
+      }
+    }
+
+    /* ============================
+       2) Game Container
+    ============================ */
+    #game-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    /* ============================
+       3) Trem e vagões
+    ============================ */
     #train {
       position: absolute;
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 25vh;        /* 25% da altura da tela */
-      min-height: 100px;   /* nunca menor que 100px */
+      height: 25vh;        /* 25% da altura visível */
+      min-height: 100px;   /* não ficar muito pequeno em telas baixas */
       background: #2c3e50;
       display: flex;
       align-items: flex-end;
@@ -94,11 +105,13 @@
       100% { box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); }
     }
 
-    /* Balões (tamanho relativo) */
+    /* ============================
+       4) Balões + Imagens
+    ============================ */
     .balloon {
       position: absolute;
-      width: 15vw;       /* 15% da largura da tela */
-      max-height: 18vh;  /* no máximo 18% da altura */
+      width: 15vw;         /* 15% da largura da tela */
+      max-height: 18vh;    /* no máximo 18% da altura */
       background: url('balloon.png') no-repeat center center;
       background-size: contain;
       cursor: pointer;
@@ -109,16 +122,18 @@
     }
     .balloon img {
       position: absolute;
-      top: calc(100% + 1vh); /* 1% da altura da tela abaixo do balão */
+      top: calc(100% + 1vh); /* 1% da altura abaixo do balão */
       left: 50%;
       transform: translateX(-50%);
-      width: 10vw;       /* 10% da largura da tela */
-      max-height: 12vh;  /* 12% da altura da tela */
+      width: 10vw;        /* 10% da largura */
+      max-height: 12vh;   /* 12% da altura */
       object-fit: contain;
       pointer-events: none;
     }
 
-    /* Feedback “Try Again!” */
+    /* ============================
+       5) Feedback “Try Again!”
+    ============================ */
     #feedback {
       position: absolute;
       top: 45%;
@@ -131,9 +146,12 @@
       font-size: 1.2em;
       display: none;
       z-index: 1000;
+      text-align: center;
     }
 
-    /* Botão Reiniciar */
+    /* ============================
+       6) Botão Restart
+    ============================ */
     #restart-button {
       position: absolute;
       top: 10px;
@@ -153,11 +171,13 @@
       background-color: #1c5980;
     }
 
-    /* Imagem “caindo” */
+    /* ============================
+       7) Imagem “falling”
+    ============================ */
     .falling {
       position: absolute;
-      width: 10vw;        /* mesma regra de responsividade da imagem do balão */
-      max-height: 12vh;
+      width: 10vw;        /* 10% da largura */
+      max-height: 12vh;   /* 12% da altura */
       object-fit: contain;
       pointer-events: none;
       z-index: 500;
@@ -165,19 +185,18 @@
   </style>
 </head>
 <body>
-  <!-- 1) Mensagem pedindo para girar o dispositivo -->
-  <div id="rotate-notice">
-    <div>
-      <p>📱 Por favor, vire seu dispositivo para o modo paisagem (landscape) para jogar.</p>
-      <p>↪️ Vire o celular/tablet e aguarde...</p>
-    </div>
-  </div>
+  <!-- Wrapper que forçará rotação em portrait -->
+  <div id="landscape-wrapper">
+    <div id="game-container">
+      <!-- Botão Restart -->
+      <button id="restart-button" onclick="restartGame()">Restart</button>
 
-  <!-- 2) Container principal do jogo -->
-  <div id="game-container">
-    <button id="restart-button" onclick="restartGame()">Restart</button>
-    <div id="feedback">Try Again!</div>
-    <div id="train"></div>
+      <!-- Feedback “Try Again!” -->
+      <div id="feedback">Try Again!</div>
+
+      <!-- Trem e vagões -->
+      <div id="train"></div>
+    </div>
   </div>
 
   <!-- Firebase SDK (inalterado) -->
@@ -203,17 +222,17 @@
     const trainElement    = document.getElementById('train');
     const feedbackElement = document.getElementById('feedback');
 
-    let wordsList    = [];  // array de palavras
+    let wordsList    = [];  // array de palavras (strings)
     let imagesList   = [];  // array de { src, pair, word }
     let numWagons    = 0;   // número de vagões
     let correctCount = 0;   // quantos pares já foram acertados
 
-    // Array que guarda todos os balões criados (para animar)
+    // Array que guarda todos os balões para animar
     const balloonsArray = [];
 
-    // =================================================
+    // ============================
     // 1) Lê parâmetros level e unit da URL
-    // =================================================
+    // ============================
     function getParamsFromURL() {
       const params = new URLSearchParams(window.location.search);
       return {
@@ -223,9 +242,9 @@
       };
     }
 
-    // =================================================
-    // 2) Carrega palavras e imagens do diretório
-    // =================================================
+    // ============================
+    // 2) Carrega palavras e imagens
+    // ============================
     function loadCardsData(callback) {
       const { level, unit } = getParamsFromURL();
       if (!level || !unit) {
@@ -266,14 +285,14 @@
         });
     }
 
-    // =================================================
+    // ============================
     // 3) Inicializa o Word Drop Express
-    // =================================================
+    // ============================
     function initWordDropGame() {
       correctCount = 0;
       trainElement.innerHTML = '';
       removeAllBalloons();
-      balloonsArray.length = 0; // limpa o array de balões
+      balloonsArray.length = 0; // limpa array de balões
 
       // Ajusta custom-property para distribuir vagões
       trainElement.style.setProperty('--num-wagons', numWagons);
@@ -301,17 +320,15 @@
       requestAnimationFrame(animateBalloons);
     }
 
-    // =================================================
     // Remove todos os balões flutuantes do DOM
-    // =================================================
     function removeAllBalloons() {
       const existing = document.querySelectorAll('.balloon');
       existing.forEach(b => b.remove());
     }
 
-    // =================================================
+    // ============================
     // 4) CRIAÇÃO DO BALÃO (com imagem logo abaixo)
-    // =================================================
+    // ============================
     function createBalloon(imgObj) {
       // Cria elemento “balão”
       const balloon = document.createElement('div');
@@ -319,13 +336,13 @@
       balloon.dataset.pair = imgObj.pair;
       balloon.dataset.word = imgObj.word;
 
-      // Adiciona temporariamente ao DOM só para medir o tamanho real em px
+      // Adiciona temporariamente ao DOM só para medir tamanho real em px
       document.body.appendChild(balloon);
       const rect = balloon.getBoundingClientRect();
       const balW = rect.width;   // largura real em px
       const balH = rect.height;  // altura real em px
 
-      // Posição inicial: X randômico entre 0 e (largura da tela - largura do balão)
+      // Posição inicial: X randômico entre 0 e (largura tela - largura balão)
       const screenW = window.innerWidth;
       const randomX = Math.random() * (screenW - balW);
       const initialTop = window.innerHeight * 0.05; // 5% do topo
@@ -343,13 +360,13 @@
         popBalloon(balloon, imgObj);
       });
 
-      // ===== Propriedades de animação para flutuar (X e Y) =====
-      const speedX = getRandomBetween(0.03, 0.07);           // px por ms
-      const direction = Math.random() < 0.5 ? -1 : 1;        // sentido horizontal
-      const ampY = getRandomBetween(10, 30);                 // amplitude da oscilação vertical
-      const freqY = getRandomBetween(0.002, 0.005);          // frequência vertical
-      const phaseX = Math.random() * Math.PI * 2;            // fase horizontal (não usada ativamente aqui, mas pode servir)
-      const phaseY = Math.random() * Math.PI * 2;            // fase vertical
+      // ===== Propriedades para animação de flutuação (X e Y) =====
+      const speedX    = getRandomBetween(0.03, 0.07);   // px por ms
+      const direction = Math.random() < 0.5 ? -1 : 1;   // sentido horizontal
+      const ampY      = getRandomBetween(10, 30);       // amplitude vertical (px)
+      const freqY     = getRandomBetween(0.002, 0.005); // frequência vertical (px/ms)
+      const phaseX    = Math.random() * Math.PI * 2;    // fase horizontal (pode ser usada futuramente)
+      const phaseY    = Math.random() * Math.PI * 2;    // fase vertical
 
       balloon._floatProps = {
         speedX,
@@ -364,7 +381,7 @@
         lastTimestamp: null
       };
 
-      // Já está no DOM. Apenas guardamos no array para animar
+      // Já está no DOM. Armazena para animar
       balloonsArray.push(balloon);
     }
 
@@ -373,22 +390,23 @@
       return min + Math.random() * (max - min);
     }
 
-    // =================================================
+    // ============================
     // 5) AO CLICAR NO BALÃO: remove balão e inicia queda da imagem
-    // =================================================
+    // ============================
     function popBalloon(balloonElem, imgObj) {
-      // Captura retângulo do balão (posição)
       const startRect = balloonElem.getBoundingClientRect();
-      // Remove o balão do DOM e do array
+      // Remove balão do DOM e do array
       const idx = balloonsArray.indexOf(balloonElem);
       if (idx !== -1) balloonsArray.splice(idx, 1);
       balloonElem.remove();
 
       // Cria elemento de imagem que cairá
       const fallingImg = document.createElement('img');
-      fallingImg.src = imgObj.src;
+      fallingImg.src       = imgObj.src;
       fallingImg.classList.add('falling');
-      fallingImg.style.left = startRect.left + (startRect.width - 60) / 2 + 'px';
+      fallingImg.style.left = startRect.left + (startRect.width - (startRect.width * 0.667)) / 2 + 'px';
+      // Explicação: a imagem tem width:10vw, mas a bounding box foi medida antes.
+      // Para centralizar, subtrai 2/3 da largura do balão (aprox. 0.667 * balW).
       fallingImg.style.top  = startRect.top + 'px';
       fallingImg.dataset.pair = imgObj.pair;
       fallingImg.dataset.word = imgObj.word;
@@ -397,9 +415,9 @@
       animateFall(fallingImg);
     }
 
-    // =================================================
+    // ============================
     // 6) ANIMAÇÃO DA QUEDA: verifica colisão com vagões
-    // =================================================
+    // ============================
     function animateFall(imgElement) {
       const speed = 4; // pixels por frame
       function step() {
@@ -410,7 +428,7 @@
         const imgRect   = imgElement.getBoundingClientRect();
 
         if (imgRect.bottom >= trainRect.top) {
-          // Verifica qual vagão “recebeu” a imagem
+          // Verifica em qual vagão a imagem caiu (baseado no centro X)
           const centerX = imgRect.left + imgRect.width / 2;
           const wagons  = Array.from(document.querySelectorAll('.wagon'));
           let landedWagon = null;
@@ -426,14 +444,14 @@
           if (landedWagon) {
             const correctPair = landedWagon.dataset.pair;
             if (correctPair === imgElement.dataset.pair) {
-              // ====== ACERTO ======
+              // ACERTO
               handleCorrectDrop(landedWagon, imgElement);
             } else {
-              // ====== ERRO ======
+              // ERRO
               handleWrongDrop(imgElement);
             }
           } else {
-            // Caiu fora do trem: volta ao jogo
+            // Caiu fora do trem → volta imediatamente ao jogo
             handleWrongDrop(imgElement);
           }
           return;
@@ -443,17 +461,17 @@
       requestAnimationFrame(step);
     }
 
-    // =================================================
+    // ============================
     // 7) TRATAMENTO DE ACERTO: encaixa imagem no vagão
-    // =================================================
+    // ============================
     function handleCorrectDrop(wagonElem, imgElement) {
       const wRect = wagonElem.getBoundingClientRect();
-      imgElement.style.position = 'absolute';
-      imgElement.style.top  = (wRect.top + wRect.height * 0.1) + 'px';
-      imgElement.style.left = (wRect.left + (wRect.width - imgElement.width) / 2) + 'px';
-      imgElement.style.width  = '10vw';
-      imgElement.style.maxHeight = '12vh';
-      imgElement.style.zIndex = '1';
+      imgElement.style.position   = 'absolute';
+      imgElement.style.top        = (wRect.top + wRect.height * 0.1) + 'px';
+      imgElement.style.left       = (wRect.left + (wRect.width - (window.innerWidth * 0.10)) / 2) + 'px';
+      imgElement.style.width      = '10vw';
+      imgElement.style.maxHeight  = '12vh';
+      imgElement.style.zIndex     = '1';
 
       wagonElem.classList.add('correct');
       correctCount++;
@@ -463,11 +481,12 @@
       }
     }
 
-    // =================================================
+    // ============================
     // 8) TRATAMENTO DE ERRO: volta imediatamente ao jogo
-    // =================================================
+    // ============================
     function handleWrongDrop(imgElement) {
       showFeedback();
+
       const pair = imgElement.dataset.pair;
       imgElement.remove(); // remove a imagem caída
 
@@ -478,9 +497,9 @@
       }
     }
 
-    // =================================================
-    // 9) FEEDBACK VISUAL “Try Again!”
-    // =================================================
+    // ============================
+    // 9) FEEDBACK “Try Again!”
+    // ============================
     function showFeedback() {
       feedbackElement.style.display = 'block';
       setTimeout(() => {
@@ -488,16 +507,16 @@
       }, 800);
     }
 
-    // =================================================
+    // ============================
     // 10) MODAL DE CONCLUSÃO
-    // =================================================
+    // ============================
     function showCompletionModal() {
       alert("Congratulations! You completed this phase.");
     }
 
-    // =================================================
+    // ============================
     // 11) ATUALIZAÇÃO DO PRÓXIMO PHASE (igual ao original)
-    // =================================================
+    // ============================
     function updateNextPhaseAuth() {
       firebase.auth().onAuthStateChanged(user => {
         if (user) {
@@ -536,9 +555,9 @@
       return params.get('fase');
     }
 
-    // =================================================
+    // ============================
     // 12) REINICIAR O JOGO
-    // =================================================
+    // ============================
     function restartGame() {
       correctCount = 0;
 
@@ -562,16 +581,16 @@
       initWordDropGame();
     }
 
-    // =================================================
+    // ============================
     // 13) INICIALIZAÇÃO AO CARREGAR PÁGINA
-    // =================================================
+    // ============================
     window.addEventListener('load', () => {
       loadCardsData(initWordDropGame);
     });
 
-    // =================================================
+    // ============================
     // 14) ANIMAÇÃO DE VOO (HORIZONTAL + OSCILAÇÃO VERTICAL)
-    // =================================================
+    // ============================
     function animateBalloons(timestamp) {
       for (let balloon of balloonsArray) {
         const props = balloon._floatProps;
@@ -606,11 +625,15 @@
       requestAnimationFrame(animateBalloons);
     }
 
-    // =================================================
+    // ============================
     // 15) EVENT LISTENER PARA REDIMENSIONAMENTO
-    // =================================================
+    // ============================
     window.addEventListener('resize', () => {
-      // Se quiser, podemos recalcular props.topBase para todos os balões aqui.
+      // Caso queira, poderia recalcular props.topBase para os balões
+      // Exemplo (não obrigatório):
+      // for (let balloon of balloonsArray) {
+      //   balloon._floatProps.topBase = window.innerHeight * 0.05;
+      // }
     });
   </script>
 </body>
