--- a/Atividades/Word Drop Express/index.html
+++ b/Atividades/Word Drop Express/index.html
@@ -19,6 +19,28 @@
       position: relative;
     }
 
+    /* ========== OVERLAY “ROTATE TO LANDSCAPE” ========== */
+    #rotate-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.85);
+      color: #fff;
+      display: none;               /* inicialmente oculto */
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 1rem;
+      box-sizing: border-box;
+      z-index: 2000;               /* acima de todos os elementos do jogo */
+    }
+    #rotate-overlay p {
+      font-size: 1.3rem;
+      line-height: 1.5;
+    }
+
     /* ========== CONTÊINER PRINCIPAL ========== */
     #game-container {
       position: relative;
@@ -138,6 +160,11 @@
   </style>
 </head>
 <body>
+  <!-- Overlay que pede para girar para paisagem -->
+  <div id="rotate-overlay">
+    <p>Please rotate your device to Landscape mode to play.</p>
+  </div>
+
   <div id="game-container">
     <!-- Botão para reiniciar a fase -->
     <button id="restart-button" onclick="restartGame()">Restart</button>
@@ -171,6 +198,7 @@
     // Referências de DOM
     const trainElement    = document.getElementById('train');
     const feedbackElement = document.getElementById('feedback');
+    const overlay         = document.getElementById('rotate-overlay');
 
     let wordsList    = [];  // array de palavras
     let imagesList   = [];  // array de { src, pair, word }
@@ -179,6 +207,24 @@
 
     // Array que guarda todos os balões criados (para animar)
     const balloonsArray = [];
+
+    // =================================================
+    //  ORIENTAÇÃO E RESIZE (overlay em modo retrato)
+    // =================================================
+    function checkOrientation() {
+      // Se a altura for maior que a largura => retrato
+      if (window.innerHeight > window.innerWidth) {
+        overlay.style.display = 'flex';
+        // Caso queira pausar alguma animação do jogo, faça aqui
+      } else {
+        overlay.style.display = 'none';
+        // Caso tenha pausado algo, retome aqui
+      }
+    }
+
+    window.addEventListener('resize', checkOrientation);
+    window.addEventListener('orientationchange', checkOrientation);
+    window.addEventListener('load', checkOrientation);
 
     // =================================================
     // 1) Lê parâmetros level e unit da URL
